# chesster

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: FetchCatch2.cmake
src/engine/: CMakeLists.txt  attack_tables.cc  attack_tables.hh  bitboard.hh  board.cc  board.hh  fen.cc  fen.hh  move.hh  move_do.cc  move_do.hh  movegen.cc  movegen.hh  perft.cc  perft.hh  search.cc  search.hh  see.cc  see.hh  uci.cc  util.hh  zobrist.cc  zobrist.hh
src/eval/: CMakeLists.txt  eval.hh  nnue_eval.cc  stub_eval.cc
tests/: CMakeLists.txt  bitboard_tests.cc  en_passant_tests.cc  movegen_legal_tests.cc  movegen_tests.cc  perft_reference_tests.cc  perft_tests.cc
tools/: bench_eval.cc  label_pgn.py  nnue_tourney.cc
